Modify default styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,11 +17,6 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #1e1e21;
+  scroll-behavior: smooth;
 }
